--- a/styles/pages/_dashboard_editPerfil.scss
+++ b/styles/pages/_dashboard_editPerfil.scss
@@ -31,7 +31,7 @@
     width: 100%;
     
     & p {
-        width: calc(100% - 180px);
+        // width: calc(100% - 180px);
         margin-left: 40px;
     }
 
@@ -45,7 +45,7 @@
 }
 
 .register__text--edit{
-    width: calc(100% - 180px);
+    width: calc(100% - 270px);
 }
 
 .registerEdit--third{
